--- a/arrowVis.ipynb
+++ b/arrowVis.ipynb
@@ -1010,7 +1010,7 @@
     "    od_df['width'] = od_df[value_field] / max_value\n",
     "\n",
     "    #tooltip 만들기\n",
-    "    od_df['od_info'] = \"순위 : \" + od_df['rank'].astype(str) + \"\\n\" + od_df[origin_field] + \"➜\" + od_df[destination_field] +\"\\n수요 : \" + od_df[value_field].astype(int).astype(str)\n",
+    "    od_df['od_info'] = \"순위 : \" + od_df['rank'].astype(str) + \"\\n\" + od_df[origin_field] + \"➜\" + od_df[destination_field] +\"\\n이동 인구 : \" + od_df[value_field].astype(int).astype(str)\n",
     "\n",
     "    # 표시할 부분만 emd_point_tsv 필터링하기\n",
     "    unique_values = pd.concat([od_df[origin_field], od_df[destination_field]]).unique()\n",
