--- a/arrowVis.ipynb
+++ b/arrowVis.ipynb
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,13 +1041,14 @@
     "            width_scale = line_width,\n",
     "            get_source_position=[\"orix\", \"oriy\"],\n",
     "            get_target_position=[\"desx\", \"desy\"],\n",
-    "            get_tilt=90,\n",
-    "            get_height = 0.1,\n",
     "            get_source_color= line_origin_color,\n",
     "            get_target_color= line_destination_color,\n",
     "            pickable=True,\n",
     "            auto_highlight=True,\n",
-    "            width_min_pixels =2,\n",
+    "            width_min_pixels =1,\n",
+    "\n",
+    "            get_tilt= 90,\n",
+    "            get_height = 0.1,\n",
     "            parameters = { \n",
     "                \"depthTest\": False,\n",
     "                \"blendFunc\":[770, 1, 773, 1], #[GL.SRC_ALPHA, GL.ONE, GL.ONE_MINUS_DST_ALPHA, GL.ONE],\n",
@@ -1109,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1139,6 +1140,26 @@
     " line_origin_color, line_destination_color, line_width, \n",
     " write_name, coord_df, coord_df_name, coord_df_lon, coord_df_lat, rank_show_num)\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27634"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(od_df)"
    ]
   }
  ],
