폰트 적용되도록 수정

--- a/arrowVis.ipynb
+++ b/arrowVis.ipynb
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,6 +981,48 @@
     "    # <script></script> 태그 사이에 js 내용 삽입\n",
     "    html_content = html_content.replace(\"<script></script>\", f\"<script>{js_content}</script>\")\n",
     "\n",
+    "    ############### 폰트 관련 패치\n",
+    "    custom_css = \"\"\"\n",
+    "        @font-face {\n",
+    "            font-family: 'Pretendard-Bold';\n",
+    "            font-weight: 700;\n",
+    "            font-display: swap;\n",
+    "            src: local('Pretendard Bold'), url('../ref/Pretendard-Bold.woff2') format('woff2'), url('../ref/Pretendard-Bold.woff') format('woff');\n",
+    "        }\n",
+    "\n",
+    "        body {\n",
+    "            font-family: 'Pretendard-Bold';\n",
+    "            margin: 0;\n",
+    "            padding: 0;\n",
+    "        }\n",
+    "        /* 추가적인 CSS 스타일은 여기에 넣을 수 있습니다 */\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # <style> 태그 직후에 custom_css 내용 삽입\n",
+    "    html_content = html_content.replace(\"<style>\", \"<style>\" + custom_css)\n",
+    "\n",
+    "    ############ 폰트 로딩 후 deck에서 texture를 만들도록 기다리는 부분\n",
+    "    # 해당 문자열을 찾는 정규 표현식\n",
+    "    pattern = r\"(const deckInstance = createDeck\\({[\\s\\S]*?}\\);)\"\n",
+    "\n",
+    "    # 찾은 문자열을 함수 내에서 사용하기 위해 저장\n",
+    "    deck_instance_string = re.search(pattern, html_content).group(1)\n",
+    "\n",
+    "    replacement_string = f\"\"\"\n",
+    "    if ('fonts' in document) {{\n",
+    "        document.fonts.load('1em Pretendard-Bold').then(function () {{\n",
+    "            // 웹폰트가 로딩되면 createDeck 함수를 실행\n",
+    "            {deck_instance_string}\n",
+    "        }});\n",
+    "    }} else {{\n",
+    "        // fonts API를 지원하지 않는 브라우저에 대한 fallback\n",
+    "        {deck_instance_string}\n",
+    "    }}\n",
+    "    \"\"\"\n",
+    "    # 해당 패턴을 찾아서 새로운 문자열로 변경\n",
+    "    html_content = re.sub(pattern, replacement_string, html_content)\n",
+    "\n",
+    "\n",
     "    # Step 5: 변경된 내용으로 HTML 파일 다시 저장 with utf-8 encoding\n",
     "    with open(writename, \"w\", encoding=\"utf-8\") as file:\n",
     "        file.write(html_content)\n"
@@ -988,13 +1030,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_od_rank_map(od_df, origin_field, destination_field, value_field,\n",
     " line_origin_color, line_destination_color, line_width, \n",
-    " write_name,  coord_df, coord_df_name, coord_df_lon, coord_df_la, rank_show_num = 100) :\n",
+    " write_name,  coord_df, coord_df_name, coord_df_lon, coord_df_lat, rank_show_num = 100) :\n",
     "\n",
     "    sido_geojson =  gpd.read_file(os.path.join(mainFolder, \"ref\",\"sido.geojson\"))\n",
     "\n",
@@ -1069,7 +1111,7 @@
     "            size_units =pdk.types.String(\"meters\"),\n",
     "\n",
     "            characterSet = pdk.types.String(\"auto\"),\n",
-    "            fontFamily = pdk.types.String(\"Pretendard-Regular\"),\n",
+    "            fontFamily = pdk.types.String(\"Pretendard-Bold\"),\n",
     "            size_min_pixels =5,\n",
     "            get_color=[255,255,255],\n",
     "            get_angle=0,\n",
@@ -1084,6 +1126,8 @@
     "\n",
     "    ]\n",
     "\n",
+    "\n",
+    "\n",
     "    # 맵 센터 정의 (서울시 중심)\n",
     "    view_state = pdk.ViewState(latitude=37.5665, longitude=126.9780, zoom=8)\n",
     "\n",
@@ -1091,7 +1135,7 @@
     "    map = pdk.Deck(layers=layers,\n",
     "        initial_view_state=view_state,\n",
     "        tooltip={\"text\": \"{od_info}\"},  # tooltip의 내용\n",
-    "        map_provider=None # 기본 배경지도 생략\n",
+    "        map_provider=None # 기본 배경지도 생략        \n",
     "    )\n",
     "\n",
     "    # 맵 렌더링\n",
@@ -1110,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
